--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -4,6 +4,8 @@ on:
     types: [opened, labeled, unlabeled, synchronize]
 jobs:
   label:
+    # Only run if PR is not from a fork
+    if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
     permissions:
       issues: write
@@ -26,4 +28,3 @@ jobs:
             Type:DevOps
             dependencies
           add_comment: true
-          token: ${{ secrets.GH_TOKEN_OPENCLOUDERS }}
