Makefile: graph depends on mockery

--- a/services/graph/Makefile
+++ b/services/graph/Makefile
@@ -13,7 +13,7 @@ include ../../.make/release.mk
 include ../../.make/docs.mk
 
 .PHONY: go-generate
-go-generate:
+go-generate: $(MOCKERY)
 	$(MOCKERY)
 
 .PHONY: l10n-pull
