fix mockery warnings
Signed-off-by: Jörn Friedrich Dreyer <jfd@butonic.de>

--- a/pkg/.mockery.yaml
+++ b/pkg/.mockery.yaml
@@ -1,4 +1,7 @@
+issue-845-fix: True
+resolve-type-alias: False
 with-expecter: true
+disable-version-string: True
 filename: "{{.InterfaceName | snakecase }}.go"
 dir: "{{.PackageName}}/mocks"
 mockname: "{{.InterfaceName}}"
