--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -260,12 +260,12 @@ COMPOSE_PATH_SEPARATOR=:
 # configuring an external LDAP server based on other products like Microsoft Active Directory or other LDAP servers.
 #
 # Note: the leading colon is required to enable the service.
-LDAP=:ldap.yml
+#LDAP=:ldap.yml
 # Password of LDAP user "cn=admin,dc=opencloud,dc=eu". Defaults to "admin"
 LDAP_ADMIN_PASSWORD=
 # LDAP manager
 # login with uid ldapadmin and password
-LDAP_MANAGER=:../shared/config/ldap/docker-compose.yml
+#LDAP_MANAGER=:../shared/config/ldap/docker-compose.yml
 # LDAP manager domain. Defaults to "ldap.opencloud.test"
 LDAP_MANAGER_DOMAIN=
 
@@ -282,7 +282,7 @@ LDAP_MANAGER_DOMAIN=
 # 2. Shared User Directory: Users are created in Keycloak and can be used in OpenCloud immediately
 # because the LDAP server is connected to both Keycloak and OpenCloud.
 # Note: the leading colon is required to enable the service.
-KEYCLOAK=:keycloak.yml
+#KEYCLOAK=:keycloak.yml
 # Domain for Keycloak. Defaults to "keycloak.opencloud.test".
 KEYCLOAK_DOMAIN=
 # Realm which to be used with OpenCloud. Defaults to "OpenCloud"
@@ -292,7 +292,7 @@ KEYCLOAK_ADMIN_USER=
 # Admin user login password. Defaults to "admin"
 KEYCLOAK_ADMIN_PASSWORD=
 # Autoprovisioning mode. Defaults to "true"
-KEYCLOAK_AUTOPROVISIONING=:keycloak-autoprovisioning.yml
+#KEYCLOAK_AUTOPROVISIONING=:keycloak-autoprovisioning.yml
 
 ## IMPORTANT ##
 # This MUST be the last line as it assembles the supplemental compose files to be used.
