collaborative posix test (#672)
* collaborative posix test

* fix after review

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -458,6 +458,15 @@ default:
         - TrashbinContext:
         - SpacesTUSContext:
 
+    collaborativePosix:
+      paths:
+        - "%paths.base%/../features/collaborativePosix"
+      context: *common_ldap_suite_context
+      contexts:
+        - FeatureContext: *common_feature_context_params
+        - CliContext:
+        - OcConfigContext:
+
     coreApiMain:
       paths:
         - "%paths.base%/../features/coreApiMain"
