--- a/tests/acceptance/docker/src/posix.yml
+++ b/tests/acceptance/docker/src/posix.yml
@@ -6,3 +6,4 @@ services:
       STORAGE_USERS_DRIVER: posix
       # posix requires a shared cache store
       STORAGE_USERS_ID_CACHE_STORE: "nats-js-kv"
+      STORAGE_USERS_POSIX_WATCH_FS: "true"
