chore: add idp login text setting to full deployment example

--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -260,6 +260,11 @@ LDAP_ADMIN_PASSWORD=
 # LDAP manager domain. Defaults to "ldap.opencloud.test"
 LDAP_MANAGER_DOMAIN=
 
+### LibreGraph Connect (lico) IDP ###
+# LibreGraph Connect (lico) implements an OpenID provider (OP) with integrated web login and consent forms.
+# Text hint that appears within the username input field on the sign-in page
+IDP_DEFAULT_SIGNIN_PAGE_TEXT=
+
 ### Keycloak Settings ###
 # Keycloak is an open-source identity and access management solution.
 # We are using Keycloak as the default identity provider on production installations.
