PosixTest. Check that version, share and link still exist (#837)

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -466,6 +466,8 @@ default:
         - FeatureContext: *common_feature_context_params
         - CliContext:
         - OcConfigContext:
+        - SharingNgContext:
+        - PublicWebDavContext:
 
     coreApiMain:
       paths:
