enhancement: refine the profile photo service and introduce httpDataProviders which allows reusing the endpoints

--- a/services/graph/.mockery.yaml
+++ b/services/graph/.mockery.yaml
@@ -16,6 +16,7 @@ packages:
             HTTPClient:
             Permissions:
             RoleService:
+            UsersUserProfilePhotoProvider:
     github.com/opencloud-eu/reva/v2/pkg/events:
         config:
             dir: "mocks"
