fix(tests): fix nil pointer errors caused by the introduction of cs3 metadata storage

--- a/services/graph/.mockery.yaml
+++ b/services/graph/.mockery.yaml
@@ -22,6 +22,11 @@ packages:
             dir: "mocks"
         interfaces:
             Publisher:
+    github.com/opencloud-eu/reva/v2/pkg/storage/utils/metadata:
+        config:
+            dir: "mocks"
+        interfaces:
+            Storage:
     github.com/opencloud-eu/reva/v2/pkg/rgrpc/todo/pool:
         config:
             dir: "mocks"
