build: Modify mockery config to work with v3
Maintaining the positioning of the files from v2 to reduce cognitive
load.
Indentation of yaml files now matches `.editorconfig`.
All mock files regenerated.
Added empty `{}` following convention from `mockery init` etc.
Removed directory specification where it would already match.

--- a/services/antivirus/.mockery.yaml
+++ b/services/antivirus/.mockery.yaml
@@ -1,12 +1,11 @@
-issue-845-fix: True
-resolve-type-alias: False
-with-expecter: true
-disable-version-string: True
+# maintain v2 separate mocks dir
+dir: "{{.InterfaceDir}}/mocks"
+structname: "{{.InterfaceName}}"
 filename: "{{.InterfaceName | snakecase }}.go"
-dir: "pkg/{{.PackageName}}/mocks"
-mockname: "{{.InterfaceName}}"
-outpkg: "mocks"
+pkgname: mocks
+
+template: testify
 packages:
-    github.com/opencloud-eu/opencloud/services/antivirus/pkg/scanners:
-        interfaces:
-            Scanner:
+  github.com/opencloud-eu/opencloud/services/antivirus/pkg/scanners:
+    interfaces:
+      Scanner: {}
