--- a/services/collaboration/.mockery.yaml
+++ b/services/collaboration/.mockery.yaml
@@ -1,27 +1,27 @@
-issue-845-fix: True
-resolve-type-alias: False
-with-expecter: true
-disable-version-string: True
+# maintain v2 separate mocks dir
+dir: "{{.InterfaceDir}}/mocks"
+structname: "{{.InterfaceName}}"
 filename: "{{.InterfaceName | snakecase }}.go"
-mockname: "{{.InterfaceName}}"
-outpkg: "mocks"
+pkgname: mocks
+
+template: testify
 packages:
-    github.com/opencloud-eu/opencloud/services/collaboration/pkg/connector:
+  github.com/opencloud-eu/opencloud/services/collaboration/pkg/connector:
+    config:
+      dir: mocks
+    interfaces:
+      ConnectorService: {}
+      ContentConnectorService: {}
+      FileConnectorService: {}
+  github.com/opencloud-eu/opencloud/services/collaboration/pkg/locks:
+    config:
+      dir: mocks
+    interfaces:
+      LockParser: {}
+  github.com/opencloud-eu/reva/v2/pkg/rgrpc/todo/pool:
+    config:
+      dir: mocks
+    interfaces:
+      Selectable:
         config:
-            dir: "mocks"
-        interfaces:
-            ConnectorService:
-            ContentConnectorService:
-            FileConnectorService:
-    github.com/opencloud-eu/opencloud/services/collaboration/pkg/locks:
-        config:
-            dir: "mocks"
-        interfaces:
-            LockParser:
-    github.com/opencloud-eu/reva/v2/pkg/rgrpc/todo/pool:
-        config:
-            dir: "mocks"
-        interfaces:
-            Selectable:
-                config:
-                    filename: "gateway_selector.go"
+          filename: gateway_selector.go
