--- a/services/search/.mockery.yaml
+++ b/services/search/.mockery.yaml
@@ -1,19 +1,18 @@
-issue-845-fix: True
-resolve-type-alias: False
-with-expecter: true
-disable-version-string: True
+# maintain v2 separate mocks dir
+dir: "{{.InterfaceDir}}/mocks"
+structname: "{{.InterfaceName}}"
 filename: "{{.InterfaceName | snakecase }}.go"
-dir: "pkg/{{.PackageName}}/mocks"
-mockname: "{{.InterfaceName}}"
-outpkg: "mocks"
+pkgname: mocks
+
+template: testify
 packages:
-    github.com/opencloud-eu/opencloud/services/search/pkg/engine:
-        interfaces:
-            Engine:
-    github.com/opencloud-eu/opencloud/services/search/pkg/content:
-        interfaces:
-            Extractor:
-            Retriever:
-    github.com/opencloud-eu/opencloud/services/search/pkg/search:
-        interfaces:
-            Searcher:
+  github.com/opencloud-eu/opencloud/services/search/pkg/engine:
+    interfaces:
+      Engine: {}
+  github.com/opencloud-eu/opencloud/services/search/pkg/content:
+    interfaces:
+      Extractor: {}
+      Retriever: {}
+  github.com/opencloud-eu/opencloud/services/search/pkg/search:
+    interfaces:
+      Searcher: {}
