--- a/services/settings/.mockery.yaml
+++ b/services/settings/.mockery.yaml
@@ -1,13 +1,11 @@
-issue-845-fix: True
-resolve-type-alias: False
-with-expecter: true
-disable-version-string: True
+# maintain v2 separate mocks dir
+dir: "{{.InterfaceDir}}/mocks"
+structname: "{{.InterfaceName}}"
 filename: "{{.InterfaceName | snakecase }}.go"
-mockname: "{{.InterfaceName}}"
-outpkg: "mocks"
+pkgname: mocks
+
+template: testify
 packages:
-    github.com/opencloud-eu/opencloud/services/settings/pkg/settings:
-        config:
-          dir: "pkg/settings/mocks"
-        interfaces:
-            Manager:
+  github.com/opencloud-eu/opencloud/services/settings/pkg/settings:
+    interfaces:
+      Manager: {}
